--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://dodiou.github.io/DandoriDB",
   "private": true,
   "dependencies": {
+    "color-convert": "^2.0.1",
     "ol": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -38,6 +39,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/color-convert": "^2.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
