--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://dodiou.github.io/DandoriDB",
   "private": true,
   "dependencies": {
+    "classnames": "^2.3.2",
     "color-convert": "^2.0.1",
     "ol": "^7.4.0",
     "react": "^18.2.0",
